3/4/13 #10 change ScientificNotationNode to use Property instead of setValue
3/3/14 #16 add note about indicator code to JSdoc
3/4/14 #22 added blank lines before comments, as suggested
# 1.0.0-dev.16 2/27/14
3/4/14 RatioNode cleanup
3/4/14 enable 'ratio' feature in production version, since it's now usable on all platforms
3/4/14 ratio: use scenery to create molecule images, which are then drawn directly to canvas
3/4/14 delete node-per-molecule strategy from 'ratio' feature since it's unusably slow
3/4/14 increase performance of 'ratio' feature by using drawImage instead of arc
3/4/14 tweak spacing in 'H3O+/OH-' label
3/4/14 tweak the y-spacing above and below the beaker controls
3/4/14 tweak the x-spacing in formulas, so that H3O+ isn't so spread out
3/3/14 simplify FaucetFluidNode constructor, so that it uniformly takes a colorProperty parameter and doesn't rely on duck-typing of solution
3/3/14 #21 replace water property in model with direct access of Water constant at various use sites
3/3/14 #20 remove unused exponentRange parameter from LinearGraph constructor
3/3/14 #18 factor out options that are common to all ScientificNotationNode instantiations
3/3/14 #14 bind added to linked functions in MoleculeCountNode
3/3/14 #9 create arrow only for interactive graph indicators
3/3/14 #7 change '**' to '^' for exponent operator in model.txt
3/3/14 delete unused dropper-icon.png
3/3/14 #8 horizontally flip dropper images so that lighting is consistent with other parts of the sim
3/3/14 ratio: reduced number of molecules to 1000, use CanvasNode, performance is much better
3/3/14 update implementation-notes.txt
3/3/14 fixed logic for hiding 'ratio' feature
3/3/14 move PHScaleNode to inner type of MacroPHMeterNode, since it's only used there
3/3/14 replace GraphIndicator subtypes with factory functions
3/3/14 move molecules and atoms to common/view/molecules/
3/3/14 add flag to RatioNode for disabling feature, so that all aspects of this feature are in one file